force-app/main/default/objects/Industry_Region_Wise_Rep__c/Industry_Region_Wise_Rep__c.object-meta.xml
<CustomObject>
    <label>Industry/Region Wise Rep</label>
    <nameField>
        <displayFormat>RN-{000000000}</displayFormat>
        <label>Industry/Region Wise Rep Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry/Region Wise Reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>