force-app/main/default/objects/Industry_Region_Wise_Rep__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Industry_Region_Wise_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>